--- a/notebooks/rag_yfinance.ipynb
+++ b/notebooks/rag_yfinance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,12 +37,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "TOKEN = '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'\n",
-    "CACHE_DIR = '/moto/edu/engi4800/ej2487/.cache'"
+    "CACHE_DIR = '/home/eklavya/Capstone/.cache'"
    ]
   },
   {
@@ -56,10 +56,30 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/eklavya/Capstone/notebooks'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# news_loader = DirectoryLoader('../Data/Scrapes/', glob=\"**/*.txt\", loader_cls=TextLoader)\n",
-    "# news_data = news_loader.load()"
+    "news_loader = DirectoryLoader('../data/scrapes/', glob=\"**/*.txt\", loader_cls=TextLoader)\n",
+    "news_data = news_loader.load()"
    ]
   },
   {
@@ -79,8 +99,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# history_loader = DirectoryLoader('../Data/Scrapes/', glob=\"**/*.csv\", loader_cls=CSVLoader)\n",
-    "# history_data = history_loader.load()"
+    "history_loader = DirectoryLoader('../data/scrapes/', glob=\"**/*.csv\", loader_cls=CSVLoader)\n",
+    "history_data = history_loader.load()"
    ]
   },
   {
@@ -94,11 +114,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data = news_data + history_data"
+    "data = news_data + history_data"
    ]
   },
   {
@@ -110,26 +130,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# text_splitter = RecursiveCharacterTextSplitter(\n",
-    "#     chunk_size = 1000, # the character length of the chunk\n",
-    "#     chunk_overlap = 100, # the character length of the overlap between chunks\n",
-    "#     length_function = len, # the length function - in this case, character length (aka the python len() fn.)\n",
-    "# )\n",
+    "text_splitter = RecursiveCharacterTextSplitter(\n",
+    "    chunk_size = 1000, # the character length of the chunk\n",
+    "    chunk_overlap = 100, # the character length of the overlap between chunks\n",
+    "    length_function = len, # the length function - in this case, character length (aka the python len() fn.)\n",
+    ")\n",
     "\n",
-    "# split_data = text_splitter.split_documents(data)"
+    "split_data = text_splitter.split_documents(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Document(page_content=\"url:https://finance.yahoo.com/news/expect-sensata-technologies-st-q3-070116120.html\\ntitle:What_To_Expect_From_Sensata_Technologiess_ST_Q3_Earnings\\nSensor manufacturer Sensata Technology (NYSE:ST) will be reporting results. Here's what you need to know.\\nLast quarter Sensata Technologies reported revenues of $1.06 billion, up 4.07% year on year, beating analyst revenue expectations by 3.47%. It was a mixed quarter for the company, with a significant improvement in its inventory levels but underwhelming revenue guidance for the next quarter.\\nIs Sensata Technologies buy or sell heading into the earnings? Read our full analysis here, it's free.\\nThis quarter analysts are expecting Sensata Technologies's revenue to decline 1.27% year on year to $1.01 billion, a further deceleration on the 7.07% year-over-year decrease in revenue the company had recorded in the same quarter last year. Adjusted earnings are expected to come in at $0.90 per share.\", metadata={'source': '../data/scrapes/TXN/news/What_To_Expect_From_Sensata_Technologies_2023-11-01.txt'})"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# len(split_data)"
+    "split_data[0]"
    ]
   },
   {
@@ -1129,6 +1160,129 @@
     "dataset = Dataset.from_dict(data)\n",
     "results = evaluate(dataset)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[NodeWithScore(node=TextNode(id_='ddd6a1bb-e27c-4eb0-b2c0-91b7adfe8d1a', embedding=None, metadata={'file_path': '/home/eklavya/Capstone/data/scrapes/MRNA/news/Moderna_Tumbles_As_Light_Guidance_And_St_2023-11-03.txt', 'file_name': 'Moderna_Tumbles_As_Light_Guidance_And_St_2023-11-03.txt', 'file_type': 'text/plain', 'file_size': 309, 'creation_date': '2023-11-28', 'last_modified_date': '2023-11-28', 'last_accessed_date': '2023-12-01', 'title': 'Moderna_Tumbles_As_Light_Guidance_And_St_2023-11-03.txt', 'ticker': 'MRNA'}, excluded_embed_metadata_keys=['file_name', 'file_type', 'file_size', 'creation_date', 'last_modified_date', 'last_accessed_date'], excluded_llm_metadata_keys=['file_name', 'file_type', 'file_size', 'creation_date', 'last_modified_date', 'last_accessed_date'], relationships={<NodeRelationship.SOURCE: '1'>: RelatedNodeInfo(node_id='0ecbdf7e-2af5-489f-9926-c48cf758c34b', node_type=<ObjectType.DOCUMENT: '4'>, metadata={'file_path': '/home/eklavya/Capstone/data/scrapes/MRNA/news/Moderna_Tumbles_As_Light_Guidance_And_St_2023-11-03.txt', 'file_name': 'Moderna_Tumbles_As_Light_Guidance_And_St_2023-11-03.txt', 'file_type': 'text/plain', 'file_size': 309, 'creation_date': '2023-11-28', 'last_modified_date': '2023-11-28', 'last_accessed_date': '2023-12-01', 'title': 'Moderna_Tumbles_As_Light_Guidance_And_St_2023-11-03.txt', 'ticker': 'MRNA'}, hash='5c7470f979ce8be652829f98c6344d2ede22fa36b9a2ebfd4c31082c95a67d30'), <NodeRelationship.PREVIOUS: '2'>: RelatedNodeInfo(node_id='9fdef40c-eb12-43d7-bc3c-5c43a76d5f39', node_type=<ObjectType.TEXT: '1'>, metadata={'file_path': '/home/eklavya/Capstone/data/scrapes/MRNA/news/Moderna_Tops_BioSpaces_Best_Places_to_Wo_2023-11-09.txt', 'file_name': 'Moderna_Tops_BioSpaces_Best_Places_to_Wo_2023-11-09.txt', 'file_type': 'text/plain', 'file_size': 3866, 'creation_date': '2023-11-28', 'last_modified_date': '2023-11-28', 'last_accessed_date': '2023-12-01', 'title': 'Moderna_Tops_BioSpaces_Best_Places_to_Wo_2023-11-09.txt', 'ticker': 'MRNA'}, hash='1e906f7a23e3b320405e8057a87846413cfd57f47a81b8c741f458ff84388c1e'), <NodeRelationship.NEXT: '3'>: RelatedNodeInfo(node_id='647364c0-fb74-4db3-b380-04c00b35d0a8', node_type=<ObjectType.TEXT: '1'>, metadata={}, hash='df5c5e21f21cbcd5ee0109058ed7fa190b9b556eea327b226b0d2673572d8fcd')}, hash='8dfbb766e2be8d795ad5f7b85d94c5984f835629aa18c062041cd3eee5291243', text='url:https://finance.yahoo.com/m/7a4fedac-15f1-3fa2-838f-240bf8b06dcc/moderna-tumbles-as-light.html\\ntitle:Moderna_Tumbles_As_Light_Guidance_And_Steep_Losses_Overshadow_Sales_Beat\\nModerna stock tumbled Thursday after the Covid vaccine maker handily beat third-quarter sales forecasts, but issued light guidance.', start_char_idx=0, end_char_idx=309, text_template='{metadata_str}\\n\\n{content}', metadata_template='{key}: {value}', metadata_seperator='\\n'), score=0.8346388688431914),\n",
+       " NodeWithScore(node=TextNode(id_='6fc35f94-57af-4302-abf2-28495dfcc631', embedding=None, metadata={'file_path': '/home/eklavya/Capstone/data/scrapes/GOOGL/news/Google_is_launching_generative_AI_search_2023-11-09.txt', 'file_name': 'Google_is_launching_generative_AI_search_2023-11-09.txt', 'file_type': 'text/plain', 'file_size': 4551, 'creation_date': '2023-11-28', 'last_modified_date': '2023-11-28', 'last_accessed_date': '2023-12-01', 'title': 'Google_is_launching_generative_AI_search_2023-11-09.txt', 'ticker': 'GOOGL'}, excluded_embed_metadata_keys=['file_name', 'file_type', 'file_size', 'creation_date', 'last_modified_date', 'last_accessed_date'], excluded_llm_metadata_keys=['file_name', 'file_type', 'file_size', 'creation_date', 'last_modified_date', 'last_accessed_date'], relationships={<NodeRelationship.SOURCE: '1'>: RelatedNodeInfo(node_id='821b5724-c664-4b90-bd8c-4af62409ba03', node_type=<ObjectType.DOCUMENT: '4'>, metadata={'file_path': '/home/eklavya/Capstone/data/scrapes/GOOGL/news/Google_is_launching_generative_AI_search_2023-11-09.txt', 'file_name': 'Google_is_launching_generative_AI_search_2023-11-09.txt', 'file_type': 'text/plain', 'file_size': 4551, 'creation_date': '2023-11-28', 'last_modified_date': '2023-11-28', 'last_accessed_date': '2023-12-01', 'title': 'Google_is_launching_generative_AI_search_2023-11-09.txt', 'ticker': 'GOOGL'}, hash='964607925d02a6b266b6189c2e8697907a7a48485bc884c66e3777dde0696e4d'), <NodeRelationship.PREVIOUS: '2'>: RelatedNodeInfo(node_id='e0280921-0ffb-4295-9a1e-10c004582ab1', node_type=<ObjectType.TEXT: '1'>, metadata={'file_path': '/home/eklavya/Capstone/data/scrapes/GOOGL/news/Google_Walks_Tightrope_on_AI_in_Search_A_2023-11-03.txt', 'file_name': 'Google_Walks_Tightrope_on_AI_in_Search_A_2023-11-03.txt', 'file_type': 'text/plain', 'file_size': 7428, 'creation_date': '2023-11-28', 'last_modified_date': '2023-11-28', 'last_accessed_date': '2023-12-01', 'title': 'Google_Walks_Tightrope_on_AI_in_Search_A_2023-11-03.txt', 'ticker': 'GOOGL'}, hash='f798ad9c6c22404ffce2b2fd1e21d53868b665990b0e05fb1f549f893a243a4f'), <NodeRelationship.NEXT: '3'>: RelatedNodeInfo(node_id='fa42827e-858e-4bf7-947f-d91ab6e5792e', node_type=<ObjectType.TEXT: '1'>, metadata={}, hash='d8e33a0844f9297a204729bdd1cfd67ca6ce25776639ad707b5faf685f03a07c')}, hash='30a6acf2cdf7a217282745a8e90cdcad38d643ecbd771cc708b9ec307c38dff7', text=\"url:https://finance.yahoo.com/news/google-is-launching-generative-ai-search-in-100-additional-countries-as-ai-wars-continue-180136110.html\\ntitle:Google_is_launching_generative_AI_search_in_100_additional_countries_as_AI_wars_continue\\nGoogle (GOOG, GOOGL) announced Wednesday that it is expanding its generative AI-powered search platform, Search Generative Experience, to more than 100 countries and territories and adding support for four new languages.\\nThe move highlights the company’s effort to rapidly deploy its generative AI search and steal back mindshare from the likes of Microsoft’s (MSFT) Bing and OpenAI’s ChatGPT.\\nGoogle’s Search Generative Experience (SGE) is a version of Google search that incorporates generative AI capabilities, allowing users to ask questions and receive conversational-sounding text responses, as well as images and videos.\\nSGE is separate from Google’s Bard. SGE serves as a generative AI-powered version of Google Search, while Bard is a generative AI-powered chatbot. You can ask them both questions, but SGE is focused primarily on providing answers to search queries.\\nAs part of Wednesday’s announcement, Google’s senior director of product management and search, Hema Budaraju, said SGE is expanding to 126 new regions including Brazil, Indonesia, Mexico, Nigeria, South Africa, and South Korea.\\nThe company now offers SGE in\\xa0a total of\\xa0129 countries and territories. Users can also now search using Spanish, Portuguese, Korean, and Indonesian.\\nIn addition to expanding and incorporating more languages, Budaraju said SGE users will now be able to ask follow-up questions to prior queries directly from the main results page. Users will continue to see their answers to prior questions and, importantly for Google, relevant ads on the same page.\\nAccording to Budaraju, the new feature will roll out in the coming weeks in the US and will only be available in English.\\nFinally, Google announced that it’s improving SGE’s translation capabilities. The company says it will now detect if you’re trying to translate a statement using a homonym and ask which version of the word you want to use. Homonyms are two or more words that have the same spelling but different meanings.\\nBudaraju used the example of translating a sentence from English to Spanish with the word “tie” in it. You’ll then be able to tap the “tie” and choose the specific meaning you want to get across.\\nSGE is Google’s answer to Microsoft’s generative AI-powered Bing search engine. Microsoft got the drop on Google in February when it debuted its Bing platform along with its own chatbot. Google responded months later with the debut of SGE and a public presentation of its Bard bot.\\nGenerative AI has the potential to dramatically improve online search, providing users with a more personalized experience, but the technology presents some unique problems.\\nGenerative AI results aren’t always accurate, which can impact user trust in search engine responses. Advertisers and ad sellers like Google also rely on search result real estate to sell ads. AI-generated responses, however, take up a large amount of screen space. Google is working to find a balance that allows for ads and results without diminishing the quality of either.\\n“People are finding ads helpful here, as they provide useful options to take action and connect with businesses. We’ll experiment with new formats native to SGE that use generative AI to create relevant, high-quality ads, customized to every step of the search journey,” Alphabet CEO Sundar Pichai said during the company’s recent earnings call.\\nMicrosoft is already touting gains from its Bing search engine and Edge browser. During the company's latest earnings call, CEO Satya Nadella said users had more than 1.9 billion chats with Bing and that Edge has gained share in the browser market for 10 consecutive quarters.\\nIt'll take quite a while for Bing or Edge to catch up with Google, the world's leading search engine, but the company is banking on generative AI to do just that.\\nSGE is still in its early stages, but the company is widely expected to evolve the platform over time before ultimately making it a new primary search option for web users.\\nDaniel Howley is the tech editor at Yahoo Finance. He's been covering the tech industry since 2011. You can follow him on Twitter @DanielHowley.\\nClick here for the latest technology news that will impact the stock market.\\nRead the latest financial and business news from Yahoo Finance\\nRelated Quotes\", start_char_idx=0, end_char_idx=4505, text_template='{metadata_str}\\n\\n{content}', metadata_template='{key}: {value}', metadata_seperator='\\n'), score=0.834578583542041)]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pickle as pkl \n",
+    "x = pkl.load(open(\"/home/eklavya/Capstone/temp.pkl\", 'rb'))\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Moderna Tumbles As Light Guidance And St', '2023-11-03')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "title = x[0].metadata['title'].replace(\"_\", \" \")\n",
+    "date = title.rsplit(\" \", 1)[-1].split(\".\")[0]\n",
+    "title = title.rsplit(\" \", 1)[0]\n",
+    "\n",
+    "title, date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "link = ':'.join(x[0].text.split('\\n')[0].split(\":\")[1:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = '\\n'.join(x[1].text.rsplit(\"\\n\", -2)[2:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('id_', 'ddd6a1bb-e27c-4eb0-b2c0-91b7adfe8d1a')\n",
+      "('embedding', None)\n",
+      "('metadata', {'file_path': '/home/eklavya/Capstone/data/scrapes/MRNA/news/Moderna_Tumbles_As_Light_Guidance_And_St_2023-11-03.txt', 'file_name': 'Moderna_Tumbles_As_Light_Guidance_And_St_2023-11-03.txt', 'file_type': 'text/plain', 'file_size': 309, 'creation_date': '2023-11-28', 'last_modified_date': '2023-11-28', 'last_accessed_date': '2023-12-01', 'title': 'Moderna_Tumbles_As_Light_Guidance_And_St_2023-11-03.txt', 'ticker': 'MRNA'})\n",
+      "('excluded_embed_metadata_keys', ['file_name', 'file_type', 'file_size', 'creation_date', 'last_modified_date', 'last_accessed_date'])\n",
+      "('excluded_llm_metadata_keys', ['file_name', 'file_type', 'file_size', 'creation_date', 'last_modified_date', 'last_accessed_date'])\n",
+      "('relationships', {<NodeRelationship.SOURCE: '1'>: RelatedNodeInfo(node_id='0ecbdf7e-2af5-489f-9926-c48cf758c34b', node_type=<ObjectType.DOCUMENT: '4'>, metadata={'file_path': '/home/eklavya/Capstone/data/scrapes/MRNA/news/Moderna_Tumbles_As_Light_Guidance_And_St_2023-11-03.txt', 'file_name': 'Moderna_Tumbles_As_Light_Guidance_And_St_2023-11-03.txt', 'file_type': 'text/plain', 'file_size': 309, 'creation_date': '2023-11-28', 'last_modified_date': '2023-11-28', 'last_accessed_date': '2023-12-01', 'title': 'Moderna_Tumbles_As_Light_Guidance_And_St_2023-11-03.txt', 'ticker': 'MRNA'}, hash='5c7470f979ce8be652829f98c6344d2ede22fa36b9a2ebfd4c31082c95a67d30'), <NodeRelationship.PREVIOUS: '2'>: RelatedNodeInfo(node_id='9fdef40c-eb12-43d7-bc3c-5c43a76d5f39', node_type=<ObjectType.TEXT: '1'>, metadata={'file_path': '/home/eklavya/Capstone/data/scrapes/MRNA/news/Moderna_Tops_BioSpaces_Best_Places_to_Wo_2023-11-09.txt', 'file_name': 'Moderna_Tops_BioSpaces_Best_Places_to_Wo_2023-11-09.txt', 'file_type': 'text/plain', 'file_size': 3866, 'creation_date': '2023-11-28', 'last_modified_date': '2023-11-28', 'last_accessed_date': '2023-12-01', 'title': 'Moderna_Tops_BioSpaces_Best_Places_to_Wo_2023-11-09.txt', 'ticker': 'MRNA'}, hash='1e906f7a23e3b320405e8057a87846413cfd57f47a81b8c741f458ff84388c1e'), <NodeRelationship.NEXT: '3'>: RelatedNodeInfo(node_id='647364c0-fb74-4db3-b380-04c00b35d0a8', node_type=<ObjectType.TEXT: '1'>, metadata={}, hash='df5c5e21f21cbcd5ee0109058ed7fa190b9b556eea327b226b0d2673572d8fcd')})\n",
+      "('hash', '8dfbb766e2be8d795ad5f7b85d94c5984f835629aa18c062041cd3eee5291243')\n",
+      "('text', 'url:https://finance.yahoo.com/m/7a4fedac-15f1-3fa2-838f-240bf8b06dcc/moderna-tumbles-as-light.html\\ntitle:Moderna_Tumbles_As_Light_Guidance_And_Steep_Losses_Overshadow_Sales_Beat\\nModerna stock tumbled Thursday after the Covid vaccine maker handily beat third-quarter sales forecasts, but issued light guidance.')\n",
+      "('start_char_idx', 0)\n",
+      "('end_char_idx', 309)\n",
+      "('text_template', '{metadata_str}\\n\\n{content}')\n",
+      "('metadata_template', '{key}: {value}')\n",
+      "('metadata_seperator', '\\n')\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in x[0].node:\n",
+    "    print(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
