auto rag completed, cleaned repo, fixed ui

--- a/notebooks/llamaindex_experiments.ipynb
+++ b/notebooks/llamaindex_experiments.ipynb
@@ -224,8 +224,8 @@
     "DB_URL = \"/moto/edu/engi4800/ej2487/Code/Data/StructuredDB/tables.db\"\n",
     "\n",
     "EXPERIMENT_LOGGER = \"/moto/edu/engi4800/ej2487/Code/Data/Query Results/structured_rag.csv\"\n",
-    "EXCEL_FILE = '/moto/edu/engi4800/ej2487/Code/Data/Portfolio Assets/portfolios.xlsx'\n",
-    "CSV_FOLDER = '/moto/edu/engi4800/ej2487/Code/Data/Scrapes/'\n",
+    "EXCEL_FILE_PATH = '/moto/edu/engi4800/ej2487/Code/Data/Portfolio Assets/portfolios.xlsx'\n",
+    "SOURCE_DOCUMENTS_PATH = '/moto/edu/engi4800/ej2487/Code/Data/Scrapes/'\n",
     "ASSET_MAPPING_PATH = '/moto/edu/engi4800/ej2487/Code/Data/Portfolio Assets/asset_mapping.csv'\n",
     "\n",
     "PORTFOLIOS = [\n",
@@ -311,9 +311,9 @@
    ],
    "source": [
     "sql_database = get_database(DB_URL,\n",
-    "                            excel_file=EXCEL_FILE,\n",
+    "                            EXCEL_FILE_PATH=EXCEL_FILE_PATH,\n",
     "                            portfolio=portfolio, \n",
-    "                            csv_folder=CSV_FOLDER, \n",
+    "                            SOURCE_DOCUMENTS_PATH=SOURCE_DOCUMENTS_PATH, \n",
     "                            csv_path=ASSET_MAPPING_PATH)\n",
     "\n",
     "service_context_mistral = get_service_context(\n",
