--- a/notebooks/llamaindex_experiments.ipynb
+++ b/notebooks/llamaindex_experiments.ipynb
@@ -847,8 +847,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1a5b1554",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Given an input question, first create a syntactically correct {dialect} query to run, then look at the results of the query and return the answer. You can order the results by a relevant column to return the most interesting examples in the database.\n",
+      "\n",
+      "Never query for all the columns from a specific table, only ask for a few relevant columns given the question.\n",
+      "\n",
+      "Pay attention to use only the column names that you can see in the schema description. Be careful to not query for columns that do not exist. Pay attention to which column is in which table. Also, qualify column names with the table name when needed. You are required to use the following format, each taking one line:\n",
+      "\n",
+      "Question: Question here\n",
+      "SQLQuery: SQL Query to run\n",
+      "SQLResult: Result of the SQLQuery\n",
+      "Answer: Final answer here\n",
+      "\n",
+      "Only use tables listed below.\n",
+      "{schema}\n",
+      "\n",
+      "Question: {query_str}\n",
+      "SQLQuery: \n"
+     ]
+    }
+   ],
+   "source": [
+    "DEFAULT_TEXT_TO_SQL_TMPL = (\n",
+    "    \"Given an input question, first create a syntactically correct {dialect} \"\n",
+    "    \"query to run, then look at the results of the query and return the answer. \"\n",
+    "    \"You can order the results by a relevant column to return the most \"\n",
+    "    \"interesting examples in the database.\\n\\n\"\n",
+    "    \"Never query for all the columns from a specific table, only ask for a \"\n",
+    "    \"few relevant columns given the question.\\n\\n\"\n",
+    "    \"Pay attention to use only the column names that you can see in the schema \"\n",
+    "    \"description. \"\n",
+    "    \"Be careful to not query for columns that do not exist. \"\n",
+    "    \"Pay attention to which column is in which table. \"\n",
+    "    \"Also, qualify column names with the table name when needed. \"\n",
+    "    \"You are required to use the following format, each taking one line:\\n\\n\"\n",
+    "    \"Question: Question here\\n\"\n",
+    "    \"SQLQuery: SQL Query to run\\n\"\n",
+    "    \"SQLResult: Result of the SQLQuery\\n\"\n",
+    "    \"Answer: Final answer here\\n\\n\"\n",
+    "    \"Only use tables listed below.\\n\"\n",
+    "    \"{schema}\\n\\n\"\n",
+    "    \"Question: {query_str}\\n\"\n",
+    "    \"SQLQuery: \"\n",
+    ")\n",
+    "\n",
+    "print(DEFAULT_TEXT_TO_SQL_TMPL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -870,7 +925,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
